# manja

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/kite/: error.rs  mod.rs  traits.rs
src/kite/connect/: client.rs  client_builder.rs  config.rs  credentials.rs  mod.rs  utils.rs
src/kite/connect/api/: margins.rs  market.rs  mod.rs  orders.rs  portfolio.rs  session.rs  user.rs
src/kite/connect/models/: exchange.rs  instruments.rs  margins.rs  market.rs  mod.rs  order.rs  order_enums.rs  portfolio.rs  session.rs  user.rs
src/kite/login/: chrome.rs  flow.rs  mod.rs  totp.rs
src/kite/ticker/: client.rs  mod.rs  stream.rs
src/kite/ticker/models/: mod.rs  mode.rs  request.rs
