[package]
name = "manja"
version = "0.1.1-rc"
edition = "2021"
authors = ["Paresh Saxena <pareshsaxena@gmail.com>"]
license = "MIT"
description = "Asynchronous client library for Zerodha's KiteConnect trading API"
repository = "https://github.com/saxena-dev/manja"
readme = "README.md"
documentation = "https://docs.rs/manja"
exclude = [
    "Cargo.lock",
    "tests/*",
    "examples/*",
    "*.md",
    ".*",
    ".temp/*"
]

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
base32 = "0.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
dotenv = "0.15.0"
fantoccini = "0.19.3"
hex = "0.4.3"
reqwest = { version = "0.12.4", features = ["json", "gzip", "zstd", "multipart"] }
secrecy = "0.8.0"
serde = "1.0.202"
serde_json = "1.0.117"
sha2 = "0.10.8"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
totp-rs = "5.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"

[dev-dependencies]
tokio-test = "0.4.2"
