[package]
name = "manja"
version = "0.1.1-rc"
edition = "2021"
authors = ["Paresh Saxena <pareshsaxena@gmail.com>"]
license = "MIT"
description = "Asynchronous client library for Zerodha's KiteConnect trading API"
repository = "https://github.com/saxena-dev/manja"
readme = "README.md"
documentation = "https://docs.rs/manja"
exclude = [
    "Cargo.lock",
    "tests/*",
    "examples/*",
    "*.md",
    ".*",
    ".temp/*"
]

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
base32 = "0.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
dotenv = "0.15.0"
fantoccini = "0.19.3"
futures-util = "0.3.30"
hex = "0.4.3"
reqwest = { version = "0.12.4", features = ["json", "gzip", "zstd"] }
secrecy = "0.8.0"
serde = "1.0.202"
serde_json = "1.0.117"
sha2 = "0.10.8"
stubborn-io = "0.3.5"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
totp-rs = "5.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tungstenite = "0.23.0"
url = "2.5.0"

[dev-dependencies]
log = "0.4.22"
mockito = "1.4.0"
tokio-test = "0.4.2"
futures = "0.3.30"
